syntax = "proto3";
package FlutterHereMaps;

import "map_objects.proto";

message MapChannelRequest {
    oneof object {
        //Map actions
        MapCenter setCenter = 1;
        Configuration setConfiguration = 2;
        ZoomTo zoomTo = 3;

        //UIMap objects
        MapObject setMapObject = 20;
    }
}

message MapChannelReplay {
    oneof object {
        //Map actions
        MapCenter getCenter = 1;
        MapGesture mapGesture = 2;
    }
}

message InitMapConfigutation {
    MapCenter initialMapCenter = 1;
    Configuration configuration = 2;
    bool gestureTapEnable = 10;
    bool gestureLongPressEnable = 11;
    bool gesturePinchEnable = 12;
    bool gestureTwoFingerTapEnable = 13;
    bool gestureDoubleTapEnable = 14;
    bool gesturePanEnable = 15;
    bool gestureRotationEnable = 16;
    bool gestureTwoFingerPanEnable = 17;
}